Desarrollo contenido de Torneo de Reservas

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item text-center px-3" routerLinkActive="nav-item-selected">
           <a class="nav-link nav-items" [routerLink]="['/eliminatorias', { mainPage: true }]">Eliminatorias</a>
         </li>
+        <li class="nav-item text-center px-3" routerLinkActive="nav-item-selected">
+          <a class="nav-link nav-items" [routerLink]="['/reservas', { mainPage: true }]">Torneo Reservas</a>
+        </li>
       </ul>
     </div>
   </div>
