--- a/src/app/components/liga2/liga2-tabla/liga2-tabla.component.css
+++ b/src/app/components/liga2/liga2-tabla/liga2-tabla.component.css
@@ -168,11 +168,14 @@ td {
   display: flex;
   align-items: center;
 }
-.description-stages {
-  height: 70px;
+.description-stages{
+  min-height: 70px;
+  padding: 14px 0px;
 }
 .description-stages .notes{
   margin-bottom: 0px;
+  font-size: 12px;
+  font-style: italic;
 }
 @media screen and (max-width: 575.5px) {
   .title-stages h1{
