Implementacion de play-off en torneo de reserva

--- a/src/app/components/reservas/reservas-main/reservas-main.component.html
+++ b/src/app/components/reservas/reservas-main/reservas-main.component.html
@@ -18,7 +18,7 @@
 <!-- M -->
 <div class="dropdown hide-options-M">
   <button class="btn bg-light dropdown-option w-100 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Liga 2
+    Torneo Reservas
   </button>
   <ul class="dropdown-menu bg-light w-100">
     <li><a (click)="mainPage = false;" class="dropdown-item text-center dropdown-option-item" routerLink="/reservas/fixture">Fixture</a></li>
