--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md nav-bg">
-  <div class="container-fluid">
+  <div class="container-fluid p-0 nav-container">
     <div class="square">
       <img src="./assets/images/logos/liga-logo-r.png" alt="liga-logo" width="55px">
     </div>
