--- a/src/app/components/liga2/liga2-tabla/liga2-tabla.component.html
+++ b/src/app/components/liga2/liga2-tabla/liga2-tabla.component.html
@@ -553,7 +553,7 @@
           <table class="table-bracket">
             <!-- 1 -->
             <tr>
-              <td colspan="5" class="bracket-title"><p>Eliminatoria</p></td>
+              <td colspan="3" class="bracket-title"><p>Eliminatoria</p></td>
               <td colspan="2"></td>
               <td colspan="5" class="bracket-title"><p>Semifinal</p></td>
               <td colspan="2"></td>
@@ -565,7 +565,7 @@
             </tr>
             <!-- 3 -->
             <tr>
-              <td colspan="6"></td>
+              <td colspan="4"></td>
               <td class="linebottom"></td>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
@@ -594,12 +594,10 @@
             <tr>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
-                  <a [href]="clasifiers[2].url"><img class="logos" [src]="clasifiers[2].image" [alt]="clasifiers[2].alt">&nbsp; {{ clasifiers[2].name }}</a>
+                  <a [href]="clasifiers[3].url"><img class="logos" [src]="clasifiers[3].image" [alt]="clasifiers[3].alt">&nbsp; {{ clasifiers[3].name }}</a>
                 </td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[0].idaA }}</td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[0].vueltaA }}</td>
                 <td colspan="1" class="bracket result">
-                  <div class="fw-bold">{{ data.Cuartos[0].idaA !== null && data.Cuartos[0].vueltaA !== null ? data.Cuartos[0].idaA + data.Cuartos[0].vueltaA : "" }}</div>
+                  <div class="fw-bold">{{ data.Cuartos[0].teamA !== null ? data.Cuartos[0].teamA : "" }}</div>
                   @if (data.Cuartos[0].penal.teamA) {
                     <div><b>({{ data.Cuartos[0].penal.teamA }})</b></div>
                   }
@@ -636,12 +634,10 @@
             <tr>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
-                  <a [href]="clasifiers[5].url"><img class="logos" [src]="clasifiers[5].image" [alt]="clasifiers[5].alt">&nbsp; {{ clasifiers[5].name }}</a>
+                  <a [href]="clasifiers[4].url"><img class="logos" [src]="clasifiers[4].image" [alt]="clasifiers[4].alt">&nbsp; {{ clasifiers[4].name }}</a>
                 </td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[0].idaB }}</td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[0].vueltaB }}</td>
                 <td colspan="1" class="bracket result">
-                  <div class="fw-bold">{{ data.Cuartos[0].idaB !== null && data.Cuartos[0].vueltaB !== null ? data.Cuartos[0].idaB + data.Cuartos[0].vueltaB : "" }}</div>
+                  <div class="fw-bold">{{ data.Cuartos[0].teamB !== null ? data.Cuartos[0].teamB : "" }}</div>
                   @if (data.Cuartos[0].penal.teamB) {
                     <div><b>({{ data.Cuartos[0].penal.teamB }})</b></div>
                   }
@@ -673,7 +669,7 @@
             </tr>
             <!-- 6 -->
             <tr>
-              <td colspan="12"></td>
+              <td colspan="10"></td>
               <td class="lineright"></td>
               <td class="linetop"></td>
               @if (data && data.Info.final) {
@@ -693,7 +689,7 @@
             </tr>
             <!-- 7 -->
             <tr>
-              <td colspan="6"></td>
+              <td colspan="4"></td>
               <td class="linebottom"></td>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
@@ -722,12 +718,10 @@
             <tr>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
-                  <a [href]="clasifiers[3].url"><img class="logos" [src]="clasifiers[3].image" [alt]="clasifiers[3].alt">&nbsp; {{ clasifiers[3].name }}</a>
+                  <a [href]="clasifiers[2].url"><img class="logos" [src]="clasifiers[2].image" [alt]="clasifiers[2].alt">&nbsp; {{ clasifiers[2].name }}</a>
                 </td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[1].idaA }}</td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[1].vueltaA }}</td>
                 <td colspan="1" class="bracket result">
-                  <div class="fw-bold">{{ data.Cuartos[1].idaA !== null && data.Cuartos[1].vueltaA !== null ? data.Cuartos[1].idaA + data.Cuartos[1].vueltaA : "" }}</div>
+                  <div class="fw-bold">{{ data.Cuartos[1].teamA !== null ? data.Cuartos[1].teamA : "" }}</div>
                   @if (data.Cuartos[1].penal.teamA) {
                     <div><b>({{ data.Cuartos[1].penal.teamA }})</b></div>
                   }
@@ -764,12 +758,10 @@
             <tr>
               @if (data && data.Info.cuartos) {
                 <td colspan="2" class="bracket px-2 text-start">
-                  <a [href]="clasifiers[4].url"><img class="logos" [src]="clasifiers[4].image" [alt]="clasifiers[4].alt">&nbsp; {{ clasifiers[4].name }}</a>
+                  <a [href]="clasifiers[5].url"><img class="logos" [src]="clasifiers[5].image" [alt]="clasifiers[5].alt">&nbsp; {{ clasifiers[5].name }}</a>
                 </td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[1].idaB }}</td>
-                <td colspan="1" class="bracket result">{{ data.Cuartos[1].vueltaB }}</td>
                 <td colspan="1" class="bracket result">
-                  <div class="fw-bold">{{ data.Cuartos[1].idaB !== null && data.Cuartos[1].vueltaB !== null ? data.Cuartos[1].idaB + data.Cuartos[1].vueltaB : "" }}</div>
+                  <div class="fw-bold">{{ data.Cuartos[1].teamB !== null ? data.Cuartos[1].teamB : "" }}</div>
                   @if (data.Cuartos[1].penal.teamB) {
                     <div><b>({{ data.Cuartos[1].penal.teamB }})</b></div>
                   }
